--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,21 +14,31 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+        <Button
+            style="Widget.MaterialComponents.Button.TextButton.Icon"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:id="@+id/toolbar_button"
+            android:backgroundTint="@android:color/transparent"
+            android:text="Menu"
+            android:textStyle="bold"
+            android:elevation="0dp"
+            app:icon="@drawable/ic_baseline_dehaze_24"
+            app:shapeAppearance="?attr/shapeAppearanceSmallComponent"
+            android:layout_margin="50dp"/>
+
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/toolbar_layout"
 
-            >
-
+            android:visibility="visible"
+            android:id="@+id/toolbar_layout">
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:background="@null"
                 />
-
         </com.google.android.material.appbar.AppBarLayout>
 
 
