register layout fix

--- a/app/src/main/res/layout/fragmant_register.xml
+++ b/app/src/main/res/layout/fragmant_register.xml
@@ -24,7 +24,7 @@
         android:id="@+id/iv_banner" />
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/iv_banner"
         android:layout_marginHorizontal="40dp"
         android:layout_marginBottom="70dp"
