--- a/app/src/main/res/values/spinnersRes.xml
+++ b/app/src/main/res/values/spinnersRes.xml
@@ -18,7 +18,7 @@
     <string name="beginner">Beginner</string>
     <string name="advanced">Advanced</string>
     <string name="expert">Expert</string>
-    <string name="northern_district">Northern_district</string>
+    <string name="northern_district">Northern District</string>
     <string name="haifa_district">Haifa District</string>
     <string name="central_district">Central District</string>
     <string name="jerusalem_district">Jerusalem District</string>
