--- a/app/src/main/res/values-iw-rIL/spinnersRes.xml
+++ b/app/src/main/res/values-iw-rIL/spinnersRes.xml
@@ -9,4 +9,5 @@
     <string name="jerusalem_district">מחוז ירושלים</string>
     <string name="judea_and_samaria_area">יהודה ושומרון</string>
     <string name="southern_area">מחוז דרום</string>
+    <string name="all">הכל</string>
 </resources>
